--- a/css/style.css
+++ b/css/style.css
@@ -34,28 +34,41 @@ footer {
     width: 80%;
     border-radius: 10px; }
 
-.index .home-carrousel {
-  width: 600px;
-  height: 300px; }
+.index {
+  height: 50rem; }
+  .index .text-index {
+    text-align: center;
+    font-weight: lighter;
+    padding-bottom: 30px;
+    color: grey; }
+  .index .home-carrousel {
+    width: 600px;
+    height: 300px; }
+  .index .indexflex {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .index .indexflex .home-img-with-text .card .img-text .img-100 {
+      height: 100%; }
+    .index .indexflex .home-img-with-text .card .tamaño {
+      height: 80%; }
+    .index .indexflex .img-fondo {
+      width: 500px; }
 
-.index .home-img-with-text .card .img-text .img-100 {
-  height: 100%; }
-
-.index .home-img-with-text .card .tamaño {
-  height: 80%; }
-
-.servicios .image-main-service {
-  width: 600px;
-  height: 300px; }
-
-.servicios .services .expand {
-  width: 35%;
-  height: 450px; }
-  .servicios .services .expand .total {
-    height: 100%; }
-    .servicios .services .expand .total .card-img-top {
-      height: 300px;
-      width: 98%; }
+.servicios {
+  width: 95%; }
+  .servicios .image-main-service {
+    width: 600px;
+    height: 300px; }
+  .servicios .services .expand {
+    width: 35%;
+    height: 450px; }
+    .servicios .services .expand .total {
+      height: 100%; }
+      .servicios .services .expand .total .card-img-top {
+        height: 300px;
+        width: 98%; }
 
 .galeria {
   margin-top: 25px;
@@ -67,17 +80,17 @@ footer {
   .galeria .galeria-image {
     display: flex;
     flex-wrap: wrap;
-    align-items: center; }
+    align-items: center;
+    justify-content: center; }
   .galeria img {
     padding-left: 15px;
     margin-bottom: 15px;
-    width: 300px;
-    height: 200px; }
+    width: 600px;
+    height: 300px; }
     .galeria img:hover {
       position: relative;
-      transform: scale(1.5);
-      z-index: 500000;
-      left: 60px; }
+      transform: scale(1.2);
+      z-index: 500000; }
 
 .nosotros {
   margin-top: 25px;
@@ -92,6 +105,9 @@ footer {
       width: 50%; }
 
 .contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 25px;
   margin-bottom: 50px; }
   .contacto .tittle-contact {
@@ -100,24 +116,43 @@ footer {
     padding-bottom: 30px; }
   .contacto .contact-box {
     width: 30rem; }
+  .contacto .row {
+    width: 95%;
+    margin-bottom: 25px; }
 
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   footer .social-media img {
     width: 25px;
-    height: 25px; } }
+    height: 25px; }
+  .index {
+    height: 60rem; }
+    .index .indexflex {
+      margin-top: 0px;
+      flex-direction: column; }
+      .index .indexflex .img-fondo {
+        width: 400px; } }
+
+@media (max-width: 769px) {
+  .index {
+    height: 60rem; }
+    .index .indexflex .img-fondo {
+      width: 450px; } }
 
 @media (max-width: 700px) {
   .index .home-carrousel {
     width: 400px;
     height: 200px; }
-  .home-img-with-text .card .img-text {
-    width: 200px; } }
+  .index .indexflex .home-img-with-text .card .img-text {
+    width: 200px; }
+  .index .indexflex .img-fondo {
+    width: 450px; } }
 
 @media (max-width: 450px) {
   .index .home-carrousel {
-    width: 300px; }
-  .home-img-with-text ´
-.card .img-text {
+    width: 95%; }
+  .index .indexflex .img-fondo {
+    width: 70%; }
+  .home-img-with-text ´ .card .img-text {
     margin: 0px auto;
     margin-top: 5px; }
   .contacto .contact-box {
@@ -134,4 +169,10 @@ footer {
     width: 300px;
     height: 200px; }
   .servicios .services .expand {
-    width: 75%; } }
+    width: 75%; }
+  .galeria {
+    height: 1300px; }
+    .galeria img {
+      width: 250px;
+      height: 200px;
+      padding-left: 0px; } }
