--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,4 +1,7 @@
 .contacto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 25px;
     margin-bottom: 50px;
     .tittle-contact {
@@ -8,5 +11,10 @@
     }
     .contact-box{
         width: 30rem;
+    }
+
+    .row{
+        width: 95%;
+        margin-bottom: 25px;
     }
 }
