--- a/scss/pages/_galeria.scss
+++ b/scss/pages/_galeria.scss
@@ -12,18 +12,18 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        justify-content: center;
     }
 
     img{
         padding-left: 15px;
         margin-bottom: 15px;
-        width: 300px;
-        height: 200px;
+        width: 600px;
+        height: 300px;
         &:hover{
             position: relative;
-            transform: scale(1.5);
+            transform: scale(1.2);
             z-index: 500000;    
-            left: 60px;
         }
     } 
 }
