--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,20 +1,39 @@
 .index {
+    height: 50rem;
+
+    .text-index {
+        text-align: center;
+        font-weight: lighter;
+        padding-bottom: 30px;
+        color: grey;
+    }
 
     .home-carrousel {
         width: 600px;
         height: 300px;
     }
-    
-    .home-img-with-text{
-        .card{
-            .img-text{
-                .img-100{
-                    height: 100%;
+
+    .indexflex {
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        .home-img-with-text {
+            .card {
+                .img-text {
+                    .img-100 {
+                        height: 100%;
+                    }
+                }
+
+                .tamaño {
+                    height: 80%;
                 }
             }
-            .tamaño{
-                height: 80%;
-            }
+        }
+
+        .img-fondo{
+            width: 500px;
         }
     }
 }
