--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -28,6 +28,9 @@
 
                 .tamaño {
                     height: 80%;
+                    .maincenter{
+                        margin-left: 20%;
+                    }
                 }
             }
         }
