--- a/scss/pages/_services.scss
+++ b/scss/pages/_services.scss
@@ -14,6 +14,7 @@
                 .card-img-top{
                     height: 300px;
                     width: 98%;
+                    margin-top: 1%;
                 }
             }
         }
